--- a/popup.css
+++ b/popup.css
@@ -1,35 +1,183 @@
-/*#input-text {*/
-/*    background: aquamarine;*/
-/*    width: 100%;*/
-/*    height: 80%;*/
-/*    border: 0;*/
-/*    padding: 0;*/
-/*    margin: 0;*/
-/*    font-size: 1.2em;*/
-/*    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-/*    color: #000;*/
-/*}*/
+* {
+    margin: 0;
+    padding: 0;
+}
 
-/*#text-reader {*/
-/*    background: blue;*/
-/*    border: ridge 2px;*/
-/*    padding: 5px;*/
-/*    width: 20em;*/
-/*    min-height: 5em;*/
-/*    height: 500px;*/
-/*    width: 500px;*/
-/*    overflow: auto;*/
-/*}*/
+
+
+*:focus {
+    outline: none;
+}
+
+@font-face {
+    font-family: 'BBTF';
+    src: url('BTTF.ttf');
+}
+
+body {
+    overflow: hidden;
+    padding: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+}
+
+img {
+    max-width: 20%;
+    max-height: 20%;
+    filter: invert(50%);
+}
+
+h1 {
+    font-family: 'BBTF';
+    font-size: 2em;
+    background: -webkit-linear-gradient(#ff1c14, #fefd00);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+p {
+    font-family: 'arial';
+    font-size: 1em;
+    color: darkgrey;
+}
+
+#logo_and_name {
+    /*background: aquamarine;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    margin: 1%;
+    padding: 1%;
+    /*padding: 1em;*/
+}
+
+
+#header {
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+textarea {
+    padding: 1em;
+    border: none;
+    background: #f1f6fe;
+}
+
+
 
 #input-text {
+    font-family: "American Typewriter", monospace;
+    font-size: 13px;
+    color: #1c1c1c;
     width:100%;
-    height:100%;
-    overflow:auto;
+    height:80%;
+    overflow:scroll;
+    resize: none;
+}
+
+#response {
+
+}
+
+#convert-button {
+    margin: 1em;
+}
+
+#area-input-output {
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
 }
 
 #text-reader {
-
-    border: solid 1px #000;
+    display: flex;
+    flex-direction: column;
+    /*background: blue;*/
+    width:20em;
+    min-height:5em;
+    height:500px;
+    /*border: solid 1px #000;*/
     min-height: 200px;
     width: 300px;
+    overflow: hidden;
+}
+
+#response-text {
+    padding: 1em;
+    overflow: scroll;
+    max-height: 30%;
+}
+
+
+#area-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-65 {
+   appearance: none;
+   backface-visibility: hidden;
+   background-color: #2f80ed;
+   border-radius: 10px;
+   border-style: none;
+   box-shadow: none;
+   box-sizing: border-box;
+   color: #fff;
+   cursor: pointer;
+   display: inline-block;
+   font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
+   font-size: 15px;
+   font-weight: 500;
+   height: 50px;
+   letter-spacing: normal;
+   line-height: 1.5;
+   outline: none;
+   overflow: hidden;
+   padding: 14px 30px;
+   position: relative;
+   text-align: center;
+   text-decoration: none;
+   transform: translate3d(0, 0, 0);
+   transition: all .3s;
+   user-select: none;
+   -webkit-user-select: none;
+   touch-action: manipulation;
+   vertical-align: top;
+   white-space: nowrap;
+}
+
+.button-65:hover {
+    background-color: #1366d6;
+    box-shadow: rgba(0, 0, 0, .05) 0 5px 30px, rgba(0, 0, 0, .05) 0 1px 4px;
+    opacity: 1;
+    transform: translateY(0);
+    transition-duration: .35s;
+}
+
+.button-65:hover:after {
+    opacity: .5;
+}
+
+.button-65:active {
+    box-shadow: rgba(0, 0, 0, .1) 0 3px 6px 0, rgba(0, 0, 0, .1) 0 0 10px 0, rgba(0, 0, 0, .1) 0 1px 4px -1px;
+    transform: translateY(2px);
+    transition-duration: .35s;
+}
+
+.button-65:active:after {
+    opacity: 1;
+}
+
+@media (min-width: 768px) {
+    .button-65 {
+        padding: 14px 22px;
+        width: 176px;
+    }
 }
