--- a/popup.css
+++ b/popup.css
@@ -14,6 +14,18 @@
     src: url('BTTF.ttf');
 }
 
+#clear {
+    text-align: end;
+    cursor: pointer;
+    width: 100%;
+    font-size:25px;
+    background: transparent;
+    position: relative;
+    top: 25px;
+right: 2px;
+
+}
+
 body {
     overflow: hidden;
     padding: 1em;
@@ -35,8 +47,8 @@ h1 {
     -webkit-text-fill-color: transparent;
 }
 p {
-    font-family: 'arial';
-    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
     color: darkgrey;
 }
 
